override html to compute 1rem as 16px

--- a/dominion/static/css/dominion.scss
+++ b/dominion/static/css/dominion.scss
@@ -475,3 +475,8 @@ ul.sub-group a:hover {
     background-color: #fff ;
     border-color: #fff;
 }
+
+//override censusrepoter css => 1rem == 16px
+html {
+  font-size: 100% !important
+}
