--- a/dominion/templates/homepage.html
+++ b/dominion/templates/homepage.html
@@ -5,13 +5,13 @@ data about land ownership in South Africa. Compare places using tables and maps,
 download data, and embed charts on your site.{% endblock %}
 
 {% block header %}
-    {% include 'blocks/homepage_header.html' %}
+  <div id="dominionHomePageHeader"></div>
 {% endblock header %}
 
 {% block content_container %}
-  {% include 'blocks/showcase.html' %}
+  <div id="dominionShowcase"></div>
   <div id="dominionVideo"></div>
   <div id="dominionData"></div>
   <div id="dominionAbout"></div>
-  {% include 'blocks/partners.html' %}
+  <div id="dominionPartners"></div>
 {% endblock content_container %}
