[Dominion] Fix Homepage UI Bugs  (#177)
* add link to heromap typography

* replace grayscale images to color images

* add inde, date, and update image on showcase stories

* add showcase stories to window variable

* fix attribute error python 3

* replace showcase stories

* add more stories

* fix showcase text position

* showcase styling

* showcase card number

* styling documents

* override html to compute 1rem as 16px

* add tabs to index.html for yarn start

* override fontsizes on theme

* fix styling bugs on component

* change size, rem unit as 16px + settings stories img attribute

* fix partners logo- make same size

* remove unsed file

* add more showcase stories

* fixed social media icons

* add showcase stories images

* showcase card darkness

* justify content fix on firefox

* remove footer ul padding on censusreporter

* remove test files

* style declaration

* justify content for showcase

* add auto minwidth on countries button to fix with on safari

* replace padding with margin

* update dataset count + link

* fix images alignment, content alignments

* remove inline styling

* undo removing style

* remove images

* Replace blocks in dominion with div tags.

--- a/dominion/static/css/dominion.scss
+++ b/dominion/static/css/dominion.scss
@@ -171,6 +171,9 @@ span.img-bg {
     max-width: 200px;
   }
 }
+#page-footer ul {
+  padding-left: 0;
+}
 
 // Pages
 
@@ -474,4 +477,9 @@ ul.sub-group a:hover {
     color: #000;
     background-color: #fff ;
     border-color: #fff;
+}
+
+//override censusrepoter css => 1rem == 16px
+html {
+  font-size: 100% !important
 }
