--- a/dominion/templates/profile/head2head.html
+++ b/dominion/templates/profile/head2head.html
@@ -26,8 +26,8 @@
     <div class="clear"></div>
 </div>
 <div id="dominionProfileReleasesSection"></div>
-{% include 'blocks/country_partners.html' %}
-{% include 'blocks/partners.html' %}
+<div id="dominionCountryPartners"></div>
+<div id="dominionPartners"></div>
 
 {% endblock %}
 
