added Naira sign

--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -50,7 +50,7 @@
         <section class="clearfix stat-row">
           <div class="column-full">
               <div id="chart-grouped_column-debt-debt_data"
-                   data-chart-title="External and Domestic Debt 2011 - June 2018"></div>
+                   data-chart-title="External and Domestic Debt 2011 - June 2018 in ₦" data-stat-type="number"></div>
             </div>
         </section>
 
