--- a/hurumap_land/templates/profile/profile_detail.html
+++ b/hurumap_land/templates/profile/profile_detail.html
@@ -90,6 +90,100 @@
     </article>
   {% endif %}
 
+  {% if not workershostel.is_missing %}
+  <article id="workershostel" class="clearfix">
+    <header class="section-contents">
+      <h1>Worker's Hostel Household</h1>
+    </header>
+    <div class="section-container">
+      <section class="clearfix stat-row">
+          <div class="column-full">
+            <div id="chart-column-workershostel-population_year"
+                 data-stat-type="number"
+                 data-chart-title="Number of people living in workers hostels per year"
+                 data-source-title="General Household Survey, 2018"
+                 data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+          </div>
+        </section>
+      <section class="clearfix stat-row">
+          <div class="column-full">
+            <div id="chart-histogram-workershostel-age_group"
+                 data-stat-type="number"
+                 data-chart-title="Number of people living in workers hostel per age group"
+                 data-source-title="General Household Survey, 2018"
+                 data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+          </div>
+        </section>
+        <section class="clearfix stat-row">
+            <div class="column-half">
+              <div id="chart-pie-workershostel-population_group"
+                   data-stat-type="number"
+                   data-chart-title="Number of people living in workers hostel per population group"
+                   data-source-title="General Household Survey, 2018"
+                   data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-pie-workershostel-gender"
+                   data-stat-type="number"
+                   data-chart-title="Number of people living in workers hostel per gender"
+                   data-source-title="General Household Survey, 2018"
+                   data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+            </div>
+          </section>
+        <section class="clearfix stat-row">
+            <div class="column-half">
+              <div id="chart-histogram-workershostel-access_electricity"
+                   data-stat-type="number"
+                   data-chart-title="Access to Electricity"
+                   data-source-title="General Household Survey, 2018"
+                   data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+            </div>
+            <div class="column-half">
+              <div id="chart-histogram-workershostel-handwashing_facility"
+                   data-stat-type="number"
+                   data-chart-title="Handwashing Facility"
+                   data-source-title="General Household Survey, 2018"
+                   data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+            </div>
+          </section>
+          <section class="clearfix stat-row">
+              <div class="column-full">
+                <div id="chart-histogram-workershostel-water_source"
+                     data-stat-type="number"
+                     data-chart-title="Water Source"
+                     data-source-title="General Household Survey, 2018"
+                     data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+              </div>
+            </section>
+            <section class="clearfix stat-row">
+                <div class="column-full">
+                  <div id="chart-histogram-workershostel-ownership"
+                       data-stat-type="number"
+                       data-chart-title="Ownership of dwelling"
+                       data-source-title="General Household Survey, 2018"
+                       data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                </div>
+              </section>
+              <section class="clearfix stat-row">
+                  <div class="column-third">
+                    <div id="chart-pie-workershostel-residential_ownership"
+                         data-stat-type="number"
+                         data-chart-title="Residential Ownership"
+                         data-source-title="General Household Survey, 2018"
+                         data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                  </div>
+                  <div class="column-two-thirds">
+                    <div id="chart-histogram-workershostel-rent"
+                         data-stat-type="number"
+                         data-chart-title="Monthly Rent or Mortgage"
+                         data-source-title="General Household Survey, 2018"
+                         data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                  </div>
+                </section>
+      </div>
+  </article>
+  {% endif %}
+
   {% if not landsales.is_missing %}
     <article id="agricultural-land-sales" class="clearfix">
       <header class="section-contents">
