add drone hostel data to nav

--- a/hurumap_land/templates/profile/profile_detail.html
+++ b/hurumap_land/templates/profile/profile_detail.html
@@ -21,6 +21,9 @@
               </span>
         </div>
         <ul>
+          <li><a href="#workershostel"><i class="fa fa-home"></i>
+            <span>Worker's Hostel Household Survey Data</span></a></li>
+          <li>
           <li><a href="#agricultural-land-sales"><i class="fa fa-money"></i>
             <span>Agricultural Land Sales</span></a></li>
           <li>
