--- a/hurumap_ng/templates/profile/profile_detail.html
+++ b/hurumap_ng/templates/profile/profile_detail.html
@@ -43,6 +43,113 @@
 
 {% block profile_detail %}
 
+{% if not nbs_2016.is_missing and not nbs_2018.is_missing %}
+  <article id="debt" class="clearfix">
+    <header class="section-contents"><h1>National Bureau of Statistics</h1></header>
+    <div class="section-container">
+      <section class="clearfix stat-row">
+        <div class="column-full">
+            <div id="chart-column-nbs_2016-arrested_suspects"
+                 data-chart-title="Number of Suspects Arrested on Drug Charges 2012-2016"
+                 data-stat-type="number"
+                 data-source-title="National Bureau of Statistics, 2016"
+                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+            <div id="chart-column-nbs_2016-drugs_seized"
+                 data-chart-title="Quantity of Narcotic Drugs Seized (kg) 2012-2016"
+                 data-stat-type="number"
+                 data-source-title="National Bureau of Statistics, 2016"
+                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+            <div id="chart-column-nbs_2016-suspects_prosecuted"
+                 data-chart-title="Number of Suspects Prosecuted on Drug Charges 2012-2016"
+                 data-stat-type="number"
+                 data-source-title="National Bureau of Statistics, 2016"
+                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+            <div id="chart-column-nbs_2016-conviction_secured"
+                 data-chart-title="Number of Convictions Secured on Drug Cases 2012 - 2016"
+                 data-stat-type="number"
+                 data-source-title="National Bureau of Statistics, 2016"
+                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+            <div id="chart-column-nbs_2016-counselling_concluded"
+                 data-chart-title="Number of Drug Counselling Sessions Concluded 2012 - 2016"
+                 data-stat-type="number"
+                 data-source-title="National Bureau of Statistics, 2016"
+                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+            <div id="chart-column-nbs_2018-mineral_production"
+                 data-chart-title="Mineral Production 2016 - 2018"
+                 data-stat-type="number"
+                 data-source-title="National Bureau of Statistics, 2018"
+                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+            <div id="chart-grouped_column-nbs_2018-mobile_subscription"
+                 data-chart-title="Telecoms Subscriptions by Mobile GSM and State Q4 2018"
+                 data-stat-type="number"
+                 data-source-title="National Bureau of Statistics, 2018"
+                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+            <div id="chart-column-nbs_2018-faac"
+                 data-chart-title="Federation Account Allocation Committee (FAAC) Allocation for January 2019 in Million ₦"
+                 data-stat-type="number"
+                 data-source-title="National Bureau of Statistics, 2019"
+                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+            <div id="chart-grouped_column-nbs_2018-telecom_subscription"
+                 data-chart-title="Telecoms Subscriptions 2018"
+                 data-stat-type="number"
+                 data-source-title="National Bureau of Statistics, 2018"
+                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+            <div id="chart-grouped_column-nbs_2018-jamb"
+                 data-chart-title="Telecoms Subscriptions 2018"
+                 data-stat-type="number"
+                 data-source-title="National Bureau of Statistics, 2018"
+                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+      </section>
+      <section class="clearfix stat-row">
+        <div class="column-full">
+            <div id="chart-grouped_column-nbs_2018-hiv_patients"
+                 data-chart-title="Distribution of HIV Patients by Year and Sex 2015-2016"
+                 data-stat-type="number"
+                 data-source-title="National Bureau of Statistics, 2018"
+                 data-source-link="https://nigerianstat.gov.ng/download/614"></div>
+          </div>
+      </section>
+    </div>
+  </article>
+  {% endif %}
+
   {% if not debt.is_missing %}
     <article id="debt" class="clearfix">
       <header class="section-contents"><h1>External and Domestic Debt</h1></header>
