--- a/dominion/static/css/dominion.scss
+++ b/dominion/static/css/dominion.scss
@@ -14,6 +14,10 @@ $brand-color-gray: #b1b1b1;
 $font-sans-serif: "Montserrat", sans-serif;
 $font-raleway: $font-sans-serif;
 
+html, body {
+  font-size: 16px;
+}
+
 html,
 body,
 h4,
