add workers hostel data to profile builder function + add charts to template

--- a/dominion/templates/profile/profile_detail.html
+++ b/dominion/templates/profile/profile_detail.html
@@ -24,6 +24,151 @@
           </div>
         </article>
       {% endif %}
+      {% if not workershostel.is_missing %}
+      <article id="workershostel" class="clearfix">
+        <div class="section-container">
+          <h1>Worker's Hostel Household</h1>
+          {% if not workershostel.population_year.is_missing %}
+            <section class="clearfix stat-row">
+              <div class="column-full">
+                <div id="chart-column-workershostel-population_year"
+                     data-stat-type="number"
+                     data-chart-title="Number of people living in workers hostels per year"
+                     data-source-title="General Household Survey, 2018"
+                     data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+              </div>
+            </section>
+          {% endif %}
+          {% if not workershostel.age_group.is_missing %}
+            <section class="clearfix stat-row">
+              <div class="column-full">
+                <div id="chart-histogram-workershostel-age_group"
+                     data-stat-type="number"
+                     data-chart-title="Number of people living in workers hostel per age group"
+                     data-source-title="General Household Survey, 2018"
+                     data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+              </div>
+            </section>
+            {% endif %}
+            {% if not workershostel.population_group.is_missing and not workershostel.gender.is_missing %}
+              <section class="clearfix stat-row">
+                <div class="column-half">
+                  <div id="chart-pie-workershostel-population_group"
+                       data-stat-type="number"
+                       data-chart-title="Number of people living in workers hostel per population group"
+                       data-source-title="General Household Survey, 2018"
+                       data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                </div>
+                <div class="column-half">
+                  <div id="chart-pie-workershostel-gender"
+                       data-stat-type="number"
+                       data-chart-title="Number of people living in workers hostel per gender"
+                       data-source-title="General Household Survey, 2018"
+                       data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                </div>
+              </section>
+            {% endif %}
+            {% if not workershostel.access_electricity.is_missing and not workershostel.handwashing_facility.is_missing %}
+              <section class="clearfix stat-row">
+                <div class="column-half">
+                  <div id="chart-histogram-workershostel-access_electricity"
+                       data-stat-type="number"
+                       data-chart-title="Access to Electricity"
+                       data-source-title="General Household Survey, 2018"
+                       data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                </div>
+                <div class="column-half">
+                  <div id="chart-histogram-workershostel-handwashing_facility"
+                       data-stat-type="number"
+                       data-chart-title="Handwashing Facility"
+                       data-source-title="General Household Survey, 2018"
+                       data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                </div>
+              </section>
+            {% endif %}
+            {% if not workershostel.water_source.is_missing %}
+              <section class="clearfix stat-row">
+                  <div class="column-full">
+                    <div id="chart-histogram-workershostel-water_source"
+                         data-stat-type="number"
+                         data-chart-title="Water Source"
+                         data-source-title="General Household Survey, 2018"
+                         data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                  </div>
+              </section>
+            {% endif %}
+            {% if not workershostel.ownership.is_missing %}
+              <section class="clearfix stat-row">
+                  <div class="column-full">
+                    <div id="chart-histogram-workershostel-ownership"
+                           data-stat-type="number"
+                           data-chart-title="Ownership of dwelling"
+                           data-source-title="General Household Survey, 2018"
+                           data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                </div>
+              </section>
+            {% endif %}
+            {% if not workershostel.residential_ownership.is_missing and not workershostel.rent.is_missing %}
+              <section class="clearfix stat-row">
+                <div class="column-third">
+                  <div id="chart-pie-workershostel-residential_ownership"
+                        data-stat-type="number"
+                        data-chart-title="Residential Ownership"
+                        data-source-title="General Household Survey, 2018"
+                        data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                </div>
+                <div class="column-two-thirds">
+                  <div id="chart-histogram-workershostel-rent"
+                        data-stat-type="number"
+                        data-chart-title="Monthly Rent or Mortgage"
+                        data-source-title="General Household Survey, 2018"
+                        data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                </div>
+              </section>
+            {% endif %}
+            {% if not workershostel.ss_dwelling.is_missing and not workershostel.gender.is_missing %}
+              <section class="clearfix stat-row">
+                <div class="column-half">
+                  <div id="chart-pie-workershostel-ss_dwelling"
+                        data-stat-type="number"
+                        data-chart-title="Number of people living in state subsidised dwelling"
+                        data-source-title="General Household Survey, 2018"
+                        data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                </div>
+                <div class="column-half">
+                  <div id="chart-histogram-workershostel-subsidy"
+                        data-stat-type="number"
+                        data-chart-title="Number of people that received subsidies"
+                        data-source-title="General Household Survey, 2018"
+                        data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                </div>
+              </section>
+            {% endif %}
+            {% if not workershostel.toilet_facility.is_missing %}
+              <section class="clearfix stat-row">
+                <div class="column-full">
+                  <div id="chart-column-workershostel-toilet_facility"
+                        data-stat-type="number"
+                        data-chart-title="Toilet Facility"
+                        data-source-title="General Household Survey, 2018"
+                        data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                </div>
+              </section>
+            {% endif %}
+            {% if not workershostel.living_condition.is_missing %}
+              <section class="clearfix stat-row">
+                <div class="column-two-full">
+                  <div id="chart-histogram-workershostel-living_condition"
+                        data-stat-type="number"
+                        data-chart-title="Living Condition"
+                        data-source-title="General Household Survey, 2018"
+                        data-source-link="http://www.statssa.gov.za/publications/P0318/P03182018.pdf"></div>
+                </div>
+              </section>
+            {% endif %}
+          </div>
+      </article>
+      {% endif %}
       {% if not landsales.is_missing %}
         <article id="agricultural-land-sales" class="clearfix">
           <div class="section-container">
