--- a/hurumap_ke/templates/profile/profile_detail.html
+++ b/hurumap_ke/templates/profile/profile_detail.html
@@ -44,6 +44,7 @@
 
 
 {% block profile_detail %}
+{{ table_charts }}
   {% if not demographics.is_missing %}
     <article id="demographics"
              class="clearfix {% if 'demographics' not in selected_sections %}hide{% endif %}">
