Fix Insights name

--- a/hurumap_ng/templates/_base.html
+++ b/hurumap_ng/templates/_base.html
@@ -8,7 +8,7 @@
             <li>
               <a href="//medium.com/code-for-africa"
                  target="_blank" rel="noopener noreferrer">
-                Nigeria Insights
+                Insights
               </a>
             </li>
             <li><a href="/#showcase">Showcase</a></li>
